feat: Add Dockerfile for frontend-admin and `.dockerignore` files for both frontend and backend services.

--- a/frontend-admin/Dockerfile
+++ b/frontend-admin/Dockerfile
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 # Créer le build de production
-RUN npm run build
+RUN npx vite build
 
 # Étape 2 : Serveur de production
 FROM nginx:stable-alpine
