--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - DB_USER=taxitrack_user
       - DB_PASSWORD=taxitrack_password
       - JWT_SECRET=change_me_in_production
-      - ALLOWED_ORIGINS=http://localhost:80,http://localhost:5173
+      - ALLOWED_ORIGINS=http://localhost,http://localhost:80,http://localhost:5173
     ports:
       - "5000:5000"
     depends_on:
