--- a/frontend-admin/Dockerfile
+++ b/frontend-admin/Dockerfile
@@ -22,8 +22,8 @@ FROM nginx:stable-alpine
 # Copier les fichiers de build vers le dossier Nginx
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Configuration personnalisée pour React Router (optionnel mais recommandé)
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Configuration personnalisée pour React Router
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Exposer le port 80
 EXPOSE 80
